# Notifications

./: .env-template  .gitignore  Dockerfile  README.MD  README.md  __init__.py  docker-compose.yml  manage.py  pyproject.toml
app/: __init__.py  admin.py  apps.py  config.py  models.py
app/api/v1/: celery_tasks.py  urls.py
app/api/v1/features/: README.MD  phone_cnn_service.py  phone_cnn_v2.py
app/api/v1/features/artifacts/: phone_cnn_v2.pt  phone_cnn_v2_metrics.json  phone_cnn_v2_quantized.pt  phone_cnn_v2_scripted.pt  phone_cnn_v2_vocab.json
app/api/v1/helpers/: __init__.py  email_helpers.py  sms_helpers.py  telegram_helpers.py
app/api/v1/notifications/: notifications.py  urls.py
app/api/v1/users/: urls.py  users.py
app/api/v1/users/serializers/: __init__.py  users.py
app/management/commands/: run_telegram_bot.py
app/migrations/: 0001_initial.py
app_project/: asgi.py  settings.py  urls.py
